adding github ink

--- a/responsi_chatbot.ipynb
+++ b/responsi_chatbot.ipynb
@@ -6,10 +6,17 @@
         "id": "uktyHvi8MHkH"
       },
       "source": [
-        "#Responsi 2\n",
+        "# Responsi 2\n",
         "\n",
         "# Nama : Arvinanto Bahtiar\n",
         "# NIM : 2211110014"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "GitHub link: https://github.com/suxeno/chatbot-mentalhealth"
       ]
     },
     {
